# ORAM-Evaluator

./: .gitignore  CMakeLists.txt  README.md  evaluator.cpp  evaluator.h  fast_calculator.cpp  fast_calculator.h  helper.h  linear_scan.h  main.cpp  paper_benchmarks.cpp  paper_benchmarks.h  primitives.cpp  primitives.h  settings.h  trivial_linear_scan.h  valgrind.sh
evaluation/: access_functions.h  csvFileWriter.cpp  csvFileWriter.h  evaluator.cpp  evaluator.h  plotter.cpp  plotter.h
oram/: binary_tree_oram.cpp  binary_tree_oram.h  linear_scan_oram.cpp  linear_scan_oram.h  map_based_oram.h  optimized_square_root.cpp  optimized_square_root.h  oram.h  oram_factory.h  path_oram.cpp  path_oram.h  testOram.cpp  testOram.h  tree_factory.h
types/: evalParam.h  minSettings.h  outType.h
